--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-alert": "^7.0.2",
     "react-alert-template-basic": "^1.0.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
